Fix deprecated Java methods